//import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    //id 'org.springframework.boot' version '3.3.0'
    //id 'io.spring.dependency-management' version '1.1.7'
    //id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java'
    id 'maven-publish'
    id 'application'
}
//
//def baseName = "core"
//def mainC = "dev.anye.core.Core"
//sourceCompatibility = '21' // 适当的 Java 版本

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}


repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = "AnYeLocalRepo"
        allowInsecureProtocol = true
        url = uri((System.getenv("LOCAL_MAVEN") ?: "https://maven.anye.dev") + "/repository/maven-public")
    }
}
configurations {
    shadow
    implementation.extendsFrom shadow
}
dependencies {
    //implementation('org.springframework.boot:spring-boot-starter-web')

    compileOnly 'org.slf4j:slf4j-api:1.7.36'
    compileOnly 'ch.qos.logback:logback-classic:1.5.13'

    compileOnly "org.openjdk.nashorn:nashorn-core:15.4"
    compileOnly "net.java.dev.jna:jna-platform:5.15.0"
    compileOnly "com.google.code.gson:gson:2.13.1"
    compileOnly "org.graalvm.polyglot:polyglot:24.2.1"
    compileOnly "org.graalvm.polyglot:js:24.2.1"


    //implementation("org.graalvm.compiler:compiler:24.2.1")

    //shadow("org.graalvm.polyglot:polyglot:24.2.1")
    //shadow("org.graalvm.polyglot:js:24.2.1")
}


tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            group : project.group,
            version : project.version,
            baseName : baseName,
            archivesBaseName : baseName
    ]
    inputs.properties replaceProperties
}


/*
tasks.register('customJar', Jar) {
    archiveBaseName = 'custom-jar-name'
    from(configurations.runtimeClasspath) {
    }

}
        archiveAppendix.set("all")
*/
/*
tasks{
    shadowJar {
        archiveBaseName.set(baseName)
        archiveClassifier.set("all")
        manifest {
            attributes("Main-Class" : mainC)
        }
        mergeServiceFiles()
        configurations = [
                project.configurations.runtimeClasspath,
                project.configurations.shadow
        ]
    }
}

 */
/*

    shadowJar {
        archiveBaseName.set(baseName)
        archiveClassifier.set("mc")
        manifest {
            attributes("Main-Class" : mainC)
        }
        mergeServiceFiles()
        configurations = [project.configurations.shadow]
    }
 */


/*
tasks.register('shadowJarAll', ShadowJar) {
    archiveBaseName.set(baseName)
    archiveClassifier.set("all")
    manifest {
        attributes("Main-Class" : mainC)
    }
    mergeServiceFiles()
    configurations = [
            project.configurations.runtimeClasspath,
            project.configurations.shadow
    ]
}

 */

//./gradlew clean build publishToMavenLocal
publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = group
            artifactId = baseName
            version = version
            from components.java
        }
    }
    repositories {
        mavenLocal()
        maven {
            name = "GitHubJavaRepo"
            url = uri("https://maven.pkg.github.com/An-Mao/JavaRepo")
            credentials {
                username = "An-Mao"
                password = "ghp_" + System.getenv("GTT")
            }
        }
        maven {
            name = "LocalRepo"
			allowInsecureProtocol = true
            url = uri(System.getenv("LOCAL_MAVEN") + "/repository/maven-releases")
            credentials {
                username = "am"
                password = System.getenv("N_P")
            }
        }
    }
}

/*
tasks.withType(JavaExec).configureEach {
    jvmArgs '-XX:+UnlockExperimentalVMOptions', '-XX:+EnableJVMCI',
            '--upgrade-module-path', configurations.runtimeClasspath.asPath
}

 */
/*
tasks.named("shadowJarAll") {
    dependsOn("classes") // Make sure classes are compiled before building the shadowJar
}

 */
tasks.named("build") {
    //dependsOn shadowJarAll
    dependsOn publishToMavenLocal
}


application {
    mainClass = "dev.anye.core.Core"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}